Improve code [prepare for JDK20]